// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PerimeterToolOverlay > closing polygon behavior > does not render closing line when not snapping to first point 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="var(--color-secondary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="300"
      data-y="300"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > closing polygon behavior > renders closing line when snapping to first point with invalid closure 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="var(--color-secondary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-danger)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > closing polygon behavior > renders closing line when snapping to first point with valid closure 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="var(--color-secondary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-success)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > edge cases > handles empty points array gracefully 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > edge cases > handles exactly two points (minimum for line rendering) 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="var(--color-secondary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with multiple points > differentiates first point styling from other points 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="var(--color-secondary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="0"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="0"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with multiple points > renders polygon with connected lines and points 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="var(--color-secondary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with no points > renders only snap point when no polygon points exist 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with single point > renders first point and snap point 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with single point > renders line to pointer position with invalid styling 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-danger)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="150"
      data-y="150"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > rendering with single point > renders line to pointer position with valid styling 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="150"
      data-y="150"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > snapping behavior > renders snap lines when snap result has lines 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-testid="konva-group"
    >
      <div
        data-opacity="0.5"
        data-stroke="var(--color-grid-horizontal)"
        data-stroke-width="2"
        data-testid="konva-line"
        listening="false"
      />
      <div
        data-opacity="0.5"
        data-stroke="var(--color-grid-vertical)"
        data-stroke-width="2"
        data-testid="konva-line"
        listening="false"
      />
    </div>
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="145"
      data-y="145"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > snapping behavior > renders snap lines when snap result has lines 2`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-testid="konva-group"
    >
      <div
        data-opacity="0.5"
        data-stroke="var(--color-grid-horizontal)"
        data-stroke-width="2"
        data-testid="konva-line"
        listening="false"
      />
      <div
        data-opacity="0.5"
        data-stroke="var(--color-grid-vertical)"
        data-stroke-width="2"
        data-testid="konva-line"
        listening="false"
      />
    </div>
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="50"
      data-y="50"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="145"
      data-y="145"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > snapping behavior > renders snap position when snap result exists 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-dash="[10,10]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="2"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="5"
      data-stroke="white"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="5"
      data-stroke="black"
      data-stroke-width="1"
      data-testid="konva-circle"
      data-x="120"
      data-y="120"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > zoom responsiveness > adjusts line extension based on stage dimensions 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-testid="konva-group"
    >
      <div
        data-opacity="0.5"
        data-stroke="var(--color-grid-horizontal)"
        data-stroke-width="1"
        data-testid="konva-line"
        listening="false"
      />
    </div>
    <div
      data-fill="var(--color-secondary)"
      data-radius="2.5"
      data-stroke="black"
      data-stroke-width="0.5"
      data-testid="konva-circle"
      data-x="0"
      data-y="0"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > zoom responsiveness > scales elements appropriately at high zoom 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="var(--color-secondary)"
      data-stroke-width="1"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[2.5,2.5]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="1"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="1.25"
      data-stroke="white"
      data-stroke-width="0.25"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="1.25"
      data-stroke="white"
      data-stroke-width="0.25"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="1.25"
      data-stroke="black"
      data-stroke-width="0.25"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;

exports[`PerimeterToolOverlay > zoom responsiveness > scales elements appropriately at low zoom 1`] = `
<div>
  <div
    data-testid="konva-group"
  >
    <div
      data-line-cap="round"
      data-line-join="round"
      data-stroke="var(--color-secondary)"
      data-stroke-width="8"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-dash="[40,40]"
      data-stroke="var(--color-text-tertiary)"
      data-stroke-width="8"
      data-testid="konva-line"
      listening="false"
    />
    <div
      data-fill="var(--color-primary)"
      data-radius="20"
      data-stroke="white"
      data-stroke-width="4"
      data-testid="konva-circle"
      data-x="100"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="20"
      data-stroke="white"
      data-stroke-width="4"
      data-testid="konva-circle"
      data-x="200"
      data-y="100"
      listening="false"
    />
    <div
      data-fill="var(--color-secondary)"
      data-radius="20"
      data-stroke="black"
      data-stroke-width="4"
      data-testid="konva-circle"
      data-x="200"
      data-y="200"
      listening="false"
    />
  </div>
</div>
`;
